--- a/style.css
+++ b/style.css
@@ -231,5 +231,10 @@ footer p {
 }
 @media screen and (max-width: 480px) {
 	/* 480px以下に適用されるCSS（スマホ用） */
-
+ul.gnav-navi-1 li{
+		display: inline-block;
+		width:20%;
+		font-size: 10px;
+		font-size-adjust: 0.6;
+		}
 }
