--- a/style.css
+++ b/style.css
@@ -231,10 +231,14 @@ footer p {
 }
 @media screen and (max-width: 480px) {
 	/* 480px以下に適用されるCSS（スマホ用） */
-ul.gnav-navi-1 li{
+	header p.payslip {
+	font-size:10px;
+	margin: auto;
+	}
+	ul.gnav-navi-1 li{
 		display: inline-block;
 		width:20%;
 		font-size: 8px;
-		
+		font-size-adjust: 0.6;
 		}
 }
