--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ footer p {
 @media screen and (max-width: 480px) {
 	/* 480px以下に適用されるCSS（スマホ用） */
 	header p.payslip {
-	font-size:15spx;
+	font-size:15px;
 	margin: auto;
 	}
 
