--- a/style.css
+++ b/style.css
@@ -259,9 +259,11 @@ footer p {
 	ul.gnav-navi-1 li{
 		display: inline-block;
 		width:20%;
-		font-size: 10px;
 		}
-
+	
+	ul.gnav-navi-1 li a {
+		font-size: 10px;
+	}
 
 
 		.copyright {
