--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ footer p {
 	ul.gnav-navi-1 li{
 		display: inline-block;
 		margin:2px;
-		width:12%;
+		width:20px;
 		}
 	
 	ul.gnav-navi-1 li a {
