--- a/style.css
+++ b/style.css
@@ -1,285 +1,287 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-	<link rel="stylesheet" href="style.css">
-	<script src="https://kit.fontawesome.com/4845445736.js" crossorigin="anonymous"></script>
-	<script src="style.css" crossorigin="anonymous"></script>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Rakuten Bank</title>
-</head>
-<body>
-	<header>
-		<img src="Rakuten Bank.jpg" alt="Rakuten Bank Logo">
-		<p class="payslip">入出金明細</p>
-		<a href="#"><p class="logout"><i class="fa-sharp fa-solid fa-right-to-bracket fa-lg"></i><br>ログアウト</p></a>
-	</header>
-	<nav>
-		<ul class="gnav-navi-1">
-			<li><a href="#"><p class="pink"><i class="icon fa-solid fa-house fa-2x"></i></p></a>MyAccount</li>
-			<li><a href="#"><p class="pink"><i class="icon fa-regular fa-envelope fa-2x"></i></p>メッセージ</a></li>
-			<li><a href="#"><p class="pink"><i class="icon fa-solid fa-gear fa-2x"></i></p>設定</a></li>
-			<li><a href="#"><p class="pink"><i class="icon fa-regular fa-circle-question fa-2x"></i></p>FAQ</a></li>
-			<li><a href="#"><p class="pink"><i class="icon fa-solid fa-rectangle-list fa-2x"></i></p>サービス一覧</a></li>
-		</ul>
-	</nav>
-	<main>
-		<div class="box1">
-			 <p>100名さまに現金10,000円が当たる！公営競技スペシャルキャンペーン実施中！詳細はこちら！</p>
-		</div>
-		<p class="notice"><a href="#">デビットカード利用詳細&nbsp;<i class="fa-solid fa-chevron-right fa-lg"></i></a></p>
-		<p class="notice"><a href="#">資産管理ツール　マネーサポートで<br>他行・他社のお取引も確認可能です&nbsp;<i class="fa-solid fa-chevron-right"></i></a></p>
+*{box-sizing: border-box;}
 
-		<table class="sheet">
-				<tr class="uppest">
-					<th class="left date-title">取引日</th>
-					<th class="center activity-title">入出金(円)</th>
-					<th class="right balance-title">残高(円)</th>
-				</tr>
-				<tr>
-					<td style="text-align:left" colspan="3" class="month">
-						2022年10月
-					</td>
-				</tr>
-				<tr class="list">
-					<th class="left-list left date">10/31</th>
-					<th class="middle-list activity">-80,000</th>
-					<th class="right-list right balance">857,771</th>
-				</tr>
-				<tr class="details">
-					<td style="text-align:left" colspan="2">
-						カード出金　セブン銀行
-					</td>
-					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
-				</tr>
-				<tr class="list">
-					<th class="left-list left date">10/27</th>
-					<th class="middle-list activity">-30,513</th>
-					<th class="right-list right balance">937,771</th>
-				</tr>
-				<tr class="details">
-					<td style="text-align:left" colspan="2">
-						楽天カードサービス　株式会社
-					</td>
-					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
-				</tr>
-				<tr class="list">
-					<th class="left-list left date">10/27</th>
-					<th class="middle-list activity">-45,330</th>
-					<th class="right-list right balance">968,284</th>
-				</tr>
-				<tr class="details">
-					<td style="text-align:left" colspan="2">
-						岡田　真澄
-					</td>
-					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
-				</tr>
-				<tr class="list">
-					<th class="left-list left date">10/20</th>
-					<th class="middle-list activity">328,888</th>
-					<th class="right-list right balance">1,013,614</th>
-				</tr>
-				<tr class="details">
-					<td style="text-align:left" colspan="2">
-						株式会社　ブルーオレンジ
-					</td>
-					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
-				</tr>
-				<tr class="list">
-					<th class="left-list left date">10/04</th>
-					<th class="middle-list activity">-100,000</th>
-					<th class="right-list right balance">684,726</th>
-				</tr>
-				<tr class="details">
-					<td style="text-align:left" colspan="2">
-						カード出金　セブン銀行
-					</td>
-					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
-				</tr>
-				<tr>
-					<td style="text-align:left" colspan="3" class="month">
-						2022年09月
-					</td>
-				</tr>
-				<tr class="list">
-					<th class="left-list left date">09/27</th>
-					<th class="middle-list activity">-27,898</th>
-					<th class="right-list right balance">784,726</th>
-				</tr>
-				<tr class="details">
-					<td style="text-align:left" colspan="2">
-						楽天カードサービス　株式会社
-					</td>
-					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
-				</tr>
-				<tr class="list">
-					<th class="left-list left date">09/27</th>
-					<th class="middle-list activity">-45,330</th>
-					<th class="right-list right balance">812,624</th>
-				</tr>
-				<tr class="details">
-					<td style="text-align:left" colspan="2">
-						岡田　真澄
-					</td>
-					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
-				</tr>
-				<tr class="list">
-					<th class="left-list left date">09/20</th>
-					<th class="middle-list activity">328,888</th>
-					<th class="right-list right balance">857,954</th>
-				</tr>
-				<tr class="details">
-					<td style="text-align:left" colspan="2">
-						株式会社　ブルーオレンジ
-					</td>
-					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
-				</tr>
-				<tr class="list">
-					<th class="left-list left date">09/02</th>
-					<th class="middle-list activity">-100,000</th>
-					<th class="right-list right balance">529,066</th>
-				</tr>
-				<tr class="details">
-					<td style="text-align:left" colspan="2">
-						カード出金　セブン銀行
-					</td>
-					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
-				</tr>
-				<tr>
-					<td style="text-align:left" colspan="3" class="month">
-						2022年08月
-					</td>
-				</tr>
-				<tr class="list">
-					<th class="left-list left date">08/27</th>
-					<th class="middle-list activity">-23,069</th>
-					<th class="right-list right balance">629,066</th>
-				</tr>
-				<tr class="details">
-					<td style="text-align:left" colspan="2">
-						楽天カードサービス　株式会社
-					</td>
-					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
-				</tr>
-				<tr class="list">
-					<th class="left-list left date">08/27</th>
-					<th class="middle-list activity">-45,330</th>
-					<th class="right-list right balance">652,135</th>
-				</tr>
-				<tr class="details">
-					<td style="text-align:left" colspan="2">
-						岡田　真澄
-					</td>
-					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
-				</tr>
-				<tr class="list">
-					<th class="left-list left date">08/19</th>
-					<th class="middle-list activity">328,888</th>
-					<th class="right-list right balance">697,465</th>
-				</tr>
-				<tr class="details">
-					<td style="text-align:left" colspan="2">
-						株式会社　ブルーオレンジ
-					</td>
-					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
-				</tr>
-				<tr class="list">
-					<th class="left-list left date">08/01</th>
-					<th class="middle-list activity">-100,000</th>
-					<th class="right-list right balance">368,577</th>
-				</tr>
-				<tr class="details">
-					<td style="text-align:left" colspan="2">
-						カード出金　セブン銀行
-					</td>
-					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
-				</tr>
-				<tr>
-					<td style="text-align:left" colspan="3" class="month">
-						2022年07月
-					</td>
-				</tr>
-				<tr class="list">
-					<th class="left-list left date">07/27</th>
-					<th class="middle-list activity">-21,441</th>
-					<th class="right-list right balance">468,577</th>
-				</tr>
-				<tr class="details">
-					<td style="text-align:left" colspan="2">
-						楽天カードサービス　株式会社
-					</td>
-					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
-				</tr>
-				<tr class="list">
-					<th class="left-list left date">07/27</th>
-					<th class="middle-list activity">-45,330</th>
-					<th class="right-list right balance">490,018</th>
-				</tr>
-				<tr class="details">
-					<td style="text-align:left" colspan="2">
-						岡田　真澄
-					</td>
-					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
-				</tr>
-				<tr class="list">
-					<th class="left-list left date">07/20</th>
-					<th class="middle-list activity">328,888</th>
-					<th class="right-list right balance">535,348</th>
-				</tr>
-				<tr class="details">
-					<td style="text-align:left" colspan="2">
-						株式会社　ブルーオレンジ
-					</td>
-					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
-				</tr>
-				<tr class="list">
-					<th class="left-list left date">07/04</th>
-					<th class="middle-list activity">-50,000</th>
-					<th class="right-list right balance">206,460</th>
-				</tr>
-				<tr class="details">
-					<td style="text-align:left" colspan="2">
-						カード出金　セブン銀行
-					</td>
-					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
-				</tr>
-		</table>
-		<div class="chevron">
-			<a href="#" class="pages page-left-chevron"><i class="fa-solid fa-chevron-left fa-lg"></i></a>
-			<a href="#" class="pages page-right-chevron"><i class="fa-solid fa-chevron-right fa-lg"></i></a>
-		</div>
-		<div class="attention">
-			<p>※最新の明細から順に最大50件（24ヶ月以内）の出入金明細を表示しています。</p>
-			<p>※PCサイトでは、ログイン後の「入出金明細」画面にて、最新50件（24ヶ月以内）の他に、CSV形式またはPDF形式でダウンロードすることで、「口座開設日」から「ダウンロード依頼をした日の前日」までの入出金明細をご確認いただけます。ダウンロード方法は<a href="#">こちら</a>をご確認ください。</p>
-		</div>
-	</main>
-	<footer>
-		<p class="copyright">Copyright 2001 Rakuten Bank, Ltd. All Rights Reserved.</p>
+body {
+	width:100%;
+}
 
-		<p class="info">商号<span>  </span>楽天銀行株式会社</p>
-		<p class="info">登録番号</p>
-		<p class="info">登録金融機関　関東財務局長（登金）第609号</p>
-		<p class="info">加入協会</p>
-		<p class="info">日本証券業協会、一般社団法人金融先物取引業協会</p>
-	</footer>
+header {
+	display:flex;
+	height:75px;
+	position: relative;
+	z-index: -1;
+}
+
+header img {
+	height: 70px;
+	width: 90px;
+	text-align:center;
+	margin-left:1rem;
+}
+
+header p.payslip {
+	font-size:20px;
+	margin: auto;
+}
+
+header a {
+	margin-bottom:auto;
+	margin-right:1rem;
+	text-decoration: none;
+}
+
+header a i{
+	text-align: center;
+}
+
+ul.gnav-navi-1{
+background: black;
+padding: 0;
+text-align: center;
+margin-top: 0;
+}
+
+ul.gnav-navi-1 li{
+display: inline-block;
+width:15%;
+font-size: 10px;
+font-size-adjust: 0.6;
+}
+
+.icon {
+	color:#FFF;
+}
+
+ul.gnav-navi-1 li a{
+display: block;
+padding: 0 1em 1em 1em;
+color: rgb(202, 202, 202);
+text-decoration: none;
+}
+
+
+
+ul.gnav-navi-1 {
+font-size: 15px;
+}
+
+main {
+	background-color: #f2f0ea;
+	padding: 1px;
+}
+
+.box1 {
+	padding: 0.5em 1em;
+	margin: 2em 0.5em;
+	font-weight: bold;
+	border: solid 1.5px #ded7c9;
+	background-color: #FFF;
+}
+
+.box1 p {
+	margin: 0;
+	padding: 0;
+	font-weight: lighter;
+	color: #336496;
+}
+
+.notice {
+	display: flex;
+	justify-content: flex-end;
+	padding-right: 1rem;
+}
+
+
+.notice a {
+	text-decoration: none;
+}
+
+.sheet {
+	width: 100%;
+  /* overflow-x: scroll;で、
+  スマホ画面幅に表が入りきらない場合は
+  横スクロールしてくれます */
+  overflow-x: scroll;
+  text-align: center;
+  border-collapse: collapse;
+}
+
+.uppest th {
+  font-weight: bold;
+  /* ２番目以降の線 */
+  /* 色はお好みで */
+}
+
+.left {
+	padding-left: 1rem;
+	text-align: left;
+}
+
+.right {
+	text-align: right;
+	padding-right: 1rem;
+}
+
+
+.activity-title {
+	text-align: center;
+	padding-left:2rem;
+}
+
+.details-chevron {
+	margin-right:1rem;
+}
+
+.month {
+	border-top: solid 2px #65522b;
+	border-bottom: solid 1px #65522b;
+	background-color:#d2cdc1;
+	padding:0.5rem;
+}
+
+
+.list th{
+	font-weight: normal;
+  }
+
+.activity {
+	text-align:left;s
+}
+
+.activity[title*="-"] {
+	color: red;
+}
+
+
+.left-list {
+	width:20%;
+}
+.middle-list {
+	width:50%;
+}
+
+.right-list {
+	width: 30%;
+}
+
+.details td {
+	width:100px;
+}
+
+.list, .details {
+	border-bottom: 1px solid  #65522b;
+	border-top: 1px solid  #65522b;
+	height: 45px;
+}
+
+.details td {
+	padding-left: 1rem;
+	border-bottom:solid 2px #65522b;
+}
+
+.attention p {
+	padding-left: 2rem;
+	padding-right: 1rem;
+	text-indent: -1rem;
+}
+
+footer {
+	border-top: solid 1.5px #000000;
+}
+
+footer p {
+	text-align: center;
+}
+
+.info {
+	display:block;
+	font-size:15px;
+	font-weight:lighter;
+	color: #b9b6b0;
+	margin:5px;
+}
+
+.fa-right-to-bracket {
+    display: inline-block;
+    width: 100%;
+}
+
+.pages {
+	padding-top:1.5rem;
+	padding-bottom:0.5rem;
+	display: inline-block;
+	margin-left: auto;
+	margin-right: auto;
+	position:relative;
+}
+
+.chevron {
+	text-align: center;
+	text-decoration: none;
+}
+.page-left-chevron {
+	padding-right: 1.5rem;
+}
+
+.page-right-chevron {
+	padding-left: 1.5rem;
+}
+
+@media screen and (max-width: 959px) {
+	/* 959px以下に適用されるCSS（タブレット用） */
+}
+@media screen and (max-width: 480px) {
+	/* 480px以下に適用されるCSS（スマホ用） */
+	header p.payslip {
+	font-size:15px;
+	margin: auto;
+	}
+
+	header a {
+		margin-top:auto;
+		margin-bottom:auto;
+		margin-right:1rem;
+		text-decoration: none;
+		font-size: 15px;
+	}
 	
-</body>
-</html>
+	header a i{
+		text-align: center;
+	}
+
+	ul.gnav-navi-1{
+		background: black;
+		padding: 0;
+		text-align: center;
+		margin-top: 0;
+		height:20%;
+		width:100vw;
+		}
+
+	ul.gnav-navi-1 li{
+		display: inline-block;
+		margin:2px;
+		width:20vw;
+		
+		}
+	
+	ul.gnav-navi-1 li a {
+		font-size: 10px;
+		text-align: center;
+	}
+
+
+		.copyright {
+			font-size:12px;
+		}
+		.info {
+			display:block;
+			font-size:10px;
+			font-weight:lighter;
+			color: #b9b6b0;
+			margin:5px;
+		}
+
+		.fa-2x {
+			font-size:0.5em;
+		}
+}
