--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@ body {
 
 header {
 	display:flex;
-	height:75px;
+	height: 20%;
 	position: relative;
 	z-index: -1;
+	background-color: fff;
 }
 
 header img {
@@ -33,11 +34,15 @@ header a i{
 	text-align: center;
 }
 
+nav {
+	height:40vw;
+
+}
+
 ul.gnav-navi-1{
 background: black;
-padding: 0;
 text-align: center;
-margin-top: 0;
+margin:0 auto;
 }
 
 ul.gnav-navi-1 li{
@@ -45,6 +50,7 @@ display: inline-block;
 width:15%;
 font-size: 10px;
 font-size-adjust: 0.6;
+margin:0 auto;
 }
 
 .icon {
@@ -241,7 +247,7 @@ footer p {
 		margin-bottom:auto;
 		margin-right:1rem;
 		text-decoration: none;
-		font-size: 10px;
+		font-size: 12px;
 	}
 	
 	header a i{
@@ -252,7 +258,7 @@ footer p {
 		background: black;
 		padding: 0;
 		text-align: center;
-		margin-top: 0;
+		margin:0 auto;
 		height:30%;
 		width:100vw;
 		}
@@ -260,8 +266,8 @@ footer p {
 	ul.gnav-navi-1 li{
 		display: inline-block;
 		margin:auto;
-		width:16%;
-		
+		width:18%;
+		margin:0 auto;
 		}
 	
 	ul.gnav-navi-1 li a {
@@ -270,7 +276,7 @@ footer p {
 	}
 
 	.navi-name {
-		font-size: 1.5px;
+		font-size: 2px;
 	}
 	
 
