--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
-*{box-sizing: border-box;}
-
 body {
-	width:100%;
+	width:100vw;
 }
+
+a{
+	color:inherit;
+	text-decoration: none;
+  }
 
 header {
 	display:flex;
@@ -13,10 +16,10 @@ header {
 }
 
 header img {
-	height: 70px;
-	width: 90px;
+	height: 20vw;
+	width: 25vw;
 	text-align:center;
-	margin-left:1rem;
+	margin-left: 1rem;
 }
 
 header p.payslip {
@@ -255,11 +258,12 @@ footer p {
 		padding: 0;
 		text-align: center;
 		width:100vw;
+		height:10vw;
 		}
 
 	ul.gnav-navi-1 li{
 		display: inline-block;
-		width:19vw;
+		width:17vw;
 		margin:0 auto;
 		}
 	
@@ -269,8 +273,10 @@ footer p {
 	}
 
 	.navi-name {
-		font-size: 0.25em;
+		font-size: 0.1rem;
+		margin-top:0.25rem;
 	}
+
 
 		.copyright {
 			font-size:12px;
